added terno category and unit conversion

--- a/src/app/components/ProductForm.module.css
+++ b/src/app/components/ProductForm.module.css
@@ -58,3 +58,10 @@
   margin-top: 30px;
   height: 50px;
 }
+
+.unitHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
