--- a/src/app/products/[id]/ProductDetail.module.css
+++ b/src/app/products/[id]/ProductDetail.module.css
@@ -414,3 +414,9 @@
     opacity: 0.7;
   }
 }
+.unitHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
